# com_client

./: .gitignore  .gitmodules  CLAUDE.md  CMakeConfig.cmake  CMakeConfig.txt  CMakeFunctions.txt  CMakeLists.txt  README.md
docs/documentation/html/: annotated.html  annotated_dup.js  classes.html  dir_000016_000017.html  dir_000022_000019.html  dir_000023_000016.html  dir_000023_000020.html  dir_127a0b13c4059b08a7f4d866ec5a21cc.html  dir_127a0b13c4059b08a7f4d866ec5a21cc.js  dir_3280642a839541a29e29961741ef8ced.html  dir_3280642a839541a29e29961741ef8ced.js  dir_40a07be7a32b2e45b448972e4bdb8ed5.html  dir_40a07be7a32b2e45b448972e4bdb8ed5.js  dir_4166fd07804cc527cdfc167b21a5330f.html  dir_4166fd07804cc527cdfc167b21a5330f.js  dir_470f4625da3256ec4a5c2be4bd4f8658.html  dir_470f4625da3256ec4a5c2be4bd4f8658.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_5e9cc357fe3b3313ad16f661a338681c.html  dir_5e9cc357fe3b3313ad16f661a338681c.js  dir_5e9cc357fe3b3313ad16f661a338681c_dep.map  dir_5e9cc357fe3b3313ad16f661a338681c_dep.md5  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+69 more)
include/: com_client.hpp  http_client.hpp  serial_client.hpp  tcp_client.hpp  udp_client.hpp
misc/esp32c3_module/: esp32c3_module.ino
src/: com_client.cpp  http_client.cpp  main.cpp  main_testESP32.cpp  serial_client.cpp  tcp_client.cpp  udp_client.cpp
src/arduino/: arduino.ino
tests/: CMakeLists.txt  test_crc.cpp  test_http.cpp  test_serial.cpp  test_tcp.cpp  test_udp.cpp
(+168 files in other folders)
